--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
       <div class="row align-items-center content">
         <div class="col-md-6 order-2 order-md-1">
-          <img src="imgs/ful.jpeg" alt="" class="img-fluid">
+          <img src="imgs/Ful.jpeg" alt="" class="img-fluid">
         </div>
         <div class="col-md-6 text-center order-1 order-md-2">
           <div class="row justify-content-center">
